removed <hr> tags to fall in line with existing border rules Home page looks good added about page rules to css page To Do: 	currently having issues aligning the four divs on the about page 	The last one is slightly larger 		possibly margin related?

--- a/css/index.css
+++ b/css/index.css
@@ -166,3 +166,60 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+/* adding box color section */
+.boxes .box:nth-of-type(1){
+    background-color: teal;
+}
+.boxes .box:nth-of-type(2){
+    background-color: gold;
+}
+.boxes .box:nth-of-type(3){
+    background-color: cadetblue;
+}
+.boxes .box:nth-of-type(4){
+    background-color: coral;
+}
+.boxes .box:nth-of-type(5){
+    background-color: crimson;
+}
+.boxes .box:nth-of-type(6){
+    background-color: forestgreen;
+}
+.boxes .box:nth-of-type(7){
+    background-color: darkorchid;
+}
+.boxes .box:nth-of-type(8){
+    background-color: hotpink;
+}
+.boxes .box:nth-of-type(9){
+    background-color: indigo;
+}
+.boxes .box:nth-of-type(10){
+    background-color: dodgerblue;
+}
+/* about page styles start here */
+.about {
+    border-bottom: 1px dashed;
+}
+.learnMore {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2.5%;
+}
+/* To Do:
+    resolve issues aligning the divs */
+.learnMore div {
+    max-width:45%;
+    border-bottom: 1px dashed;
+    align-items: center;
+    justify-content: space-between;
+}
+.learnMore img {
+    align-items: stretch;
+}
+button {
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 12px;
+    padding: 12px 28px;
+}
